<resources>
    <!-- ページタイトル -->
    <string name="app_name">か～る</string>
    <string name="chart">チャート</string>
    <string name="mydata">あなたのデータ</string>
    <string name="news">お知らせ</string>
    <string name="setting">設定</string>
    <string name="login">ログイン</string>

    <!-- 天気情報 -->
    <string name="tv_temp">%d℃</string>
    <string name="tv_humidity">%d%%</string>
    <string name="tv_wind">%dm/s</string>
    <string name="tv_rainy">%.2f㎜</string>
    <string name="tv_submit_read">あなたの髪は今どんな感じ？</string>
    <string name="tv_submit_able_count">きょうはあと%d回送れるよ</string>
    <string name="tv_wait_tomorrow">今日はもう3回送ったよ。明日まで待ってね。</string>
    <string name="btn_city_register">エリアを登録</string>
    <string name="change_city">地域を変更する</string>
    <string name="change_delete">地域を削除する</string>

    <!-- 時間ごと天気のヘッダー -->
    <string name="tv_header_time">時刻</string>
    <string name="tv_header_weather">天気</string>
    <string name="tv_header_temp">気温</string>
    <string name="tv_header_hum">湿度</string>
    <string name="tv_format_number">%d</string>
    <string name="tv_header_wind">風速</string>
    <string name="tv_header_rainy">降水量</string>
    <string name="tv_change_city">変更</string>

    <!-- ログインフォーム -->
    <string name="tv_login_read">ログインするとあなたのかみのけのくせ度をきろく・ぶんせきします。</string>
    <string name="btn_login_mail">メールアドレスでログイン</string>
    <string name="btn_login_twitter">Twitterでログイン</string>
    <string name="btn_sign_up">新規登録</string>

    <!-- 設定ページ -->
    <string name="user_account_setting">アカウント設定</string>
    <string name="user_profile_change">プロフィール変更</string>
    <string name="user_mail_change">メールアドレス変更</string>
    <string name="user_password_change">パスワード変更</string>

    <string name="tv_setting_header_app">アプリ設定</string>
    <string name="tv_setting_icon">アイコン設定</string>
    <string name="tv_setting_theme">テーマ設定</string>
    <string name="tv_setting_push">プッシュ通知設定</string>
    <string name="tv_setting_clear">データクリア</string>

    <string name="tv_setting_header_etc">その他</string>
    <string name="tv_setting_privacy_policy">プライバシーポリシー</string>
    <string name="tv_setting_oss">オープンソースライセンス</string>
    <string name="tv_setting_rule">利用規約</string>
    <string name="tv_setting_version">バージョン</string>

    <!-- エリア登録 -->
    <string name="tv_register_city">エリア登録</string>

    <!-- その他 -->
    <string name="dash">-</string>

    <!-- Database -->
    <string name="db_name">curl_db</string>

    <!-- Intent/Argment -->
    <string name="arg_page">PAGE</string>
    <string name="arg_set_type">SETTYPE</string>

    <!-- Prefrense -->
    <string name="shared_preferense">CURL_PREF</string>
    <string name="pref_icon">PREF_ICON</string>
    <string name="pref_theme">PREF_THEME</string>

    <!-- ステータス -->
    <string name="submited_day">%d日</string>
    <string name="hair_status_straight">ノンくせ</string>
    <string name="hair_status_curl">チョイくせ</string>
    <string name="hair_status_very_curl">オニくせ</string>

    <string name="submit_login_read">ログインすると今のあなたの髪の状態を記録・管理できるようになります。</string>

    <!-- ログインページ -->
    <string name="email">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="btn_login">ログイン</string>
    <string name="forget_password">パスワードを忘れた方</string>
    <string name="signup_goto">新規会員登録はこちら</string>

    <string name="logout">ログアウト</string>
    <string name="new_email">新しいメールアドレス</string>
    <string name="btn_change">変更する</string>
    <string name="old_password">現在のパスワード</string>
    <string name="new_password">新しいパスワード</string>
    <string name="new_password_confirm">もう１度入力してください</string>
    <string name="nickname">ニックネーム</string>
    <string name="gender">性別</string>
    <string name="hair_type">あなたの髪質</string>

    <string name="gender_male">男性</string>
    <string name="gender_female">女性</string>
    <string name="gender_none">指定しない</string>

    <string name="etc_setting">その他</string>
    <string name="withdrawal">退会</string>
    <string name="help_feedback">ヘルプとフィードバック</string>

    <string name="sign_up_nickname">あなたをなんて呼べばいいかな？名前を教えて！</string>
    <string name="next_text">次へ</string>
    <string name="sign_up_account">メールアドレスとパスワードを設定してね。これはログインするときに使うよ。</string>

    <!-- プッシュ設定 -->
    <string name="push_lead_1">プッシュ設定の変更は以下の順序で行います。</string>
    <string name="push_lead_2">端末の設定アプリから「か〜る」アプリ情報を開きます。</string>
    <string name="push_lead_3">通知を選びます。</string>
    <string name="push_lead_4">通知の表示をON/OFFにします。</string>
    <string name="device_info_btn">アプリの情報を開く</string>

    <!-- テーマ -->
    <string name="theme_enter">決定する</string>

    <!-- 退会 -->
    <string name="withdrawal_text">退会</string>
    <string name="withdrawal_lead">退会するとアカウントに関するデータの全てが削除されます。復元されませんのでご了承ください。</string>
    <string name="withdrawal_message">退会する理由をご入力ください。</string>
    <string name="withdrawal_btn">退会する</string>

    <!-- ヘルプとフィードバック -->
    <string name="contact_message">内容を入力してください</string>
    <string name="btn_help_feedback">フィードバックを送る</string>

    <string name="agree">プライバシーポリシーに同意する</string>
    <string name="agree_link">プライバシーポリシーはこちら</string>


    <!-- format -->
    <string name="msg_token_fmt">%s</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="fcm_message">fcm_message</string>
</resources>
