<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="birth.h3.app.curl_kusegeapp.ui.setting.SettingViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.setting.SettingFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_toolbar"
            app:layout_scrollFlags="enterAlways|scroll"
            app:title="@string/setting"
            app:titleTextColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:elevation="@dimen/elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:id="@+id/sv_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/account_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_m"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/account_setting_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_s"
                        android:src="@drawable/ic_settings_black_24dp"
                        android:layout_gravity="right"
                        android:visibility="@{viewModel.user == null ? View.GONE : View.VISIBLE}"/>

                    <ImageView
                        android:id="@+id/user_avatar_icon"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/weatherImage"
                        app:srcCompat="@{viewModel.avatar}"
                        android:visibility="@{viewModel.user == null ? View.GONE : View.VISIBLE}"/>

                    <TextView
                        android:id="@+id/user_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_m"
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_2l"
                        android:text='@{viewModel.user == null ? "" : viewModel.user.nickname}'
                        tools:text="kako351"
                        android:visibility="@{viewModel.user == null ? View.GONE : View.VISIBLE}"/>

                    <ImageView
                        android:id="@+id/iv_app_icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:visibility="@{viewModel.user == null ? View.VISIBLE : View.GONE}"/>

                    <TextView
                        android:id="@+id/tv_login_read"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_m"
                        android:text="@string/tv_login_read"
                        android:visibility="@{viewModel.user == null ? View.VISIBLE : View.GONE}"/>

                    <Button
                        android:id="@+id/btn_signup"
                        style="@style/Widget.AppCompat.Button"
                        android:background="@color/colorOrage"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_sign_up"
                        android:layout_marginBottom="@dimen/margin_m"
                        android:visibility="@{viewModel.user == null ? View.VISIBLE : View.GONE}"/>

                    <Button
                        android:id="@+id/btn_login_mail"
                        style="@style/Widget.AppCompat.Button"
                        android:background="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_login_mail"
                        android:visibility="@{viewModel.user == null ? View.VISIBLE : View.GONE}"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_setting_app"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_m"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/account_layout">

                    <TextView
                        android:id="@+id/tv_setting_header_app"
                        style="@style/AppSettingHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_m"
                        android:text="@string/tv_setting_header_app" />

                    <TextView
                        android:id="@+id/tv_setting_push"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_push" />

                    <TextView
                        android:id="@+id/tv_setting_icon"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_icon" />

                    <TextView
                        android:id="@+id/tv_setting_theme"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_theme" />

                    <TextView
                        android:id="@+id/tv_setting_data_clear"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_clear" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_setting_etc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_m"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_setting_app">

                    <TextView
                        android:id="@+id/tv_setting_header_etc"
                        style="@style/AppSettingHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_m"
                        android:text="@string/tv_setting_header_etc" />

                    <TextView
                        android:id="@+id/tv_setting_rule"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_rule" />

                    <TextView
                        android:id="@+id/tv_setting_privacy_policy"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_privacy_policy" />

                    <TextView
                        android:id="@+id/tv_setting_oss"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_setting_oss" />

                    <TextView
                        android:id="@+id/help_feedback"
                        style="@style/AppSettingSelectableText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_feedback" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_setting_version"
                            style="@style/AppSettingSelectableText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:text="@string/tv_setting_version"
                            android:textColor="@color/colorNoActionText" />

                        <TextView
                            android:id="@+id/tv_version_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:paddingRight="@dimen/padding_l"
                            android:text="0.11.2"
                            android:textColor="@color/colorNoActionText" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
