<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.setting.account.AccountFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/account_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/user_account_setting"
            app:titleTextColor="@color/colorPrimary"
            android:background="@color/colorWhite"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="MissingConstraints" />

        <ScrollView
            android:id="@+id/sv_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_l">

                <TextView
                    android:id="@+id/user_account_setting"
                    style="@style/AppSettingHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_m"
                    android:text="@string/user_account_setting"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/profile_change"
                    style="@style/AppSettingSelectableText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile_change"
                    app:layout_constraintTop_toBottomOf="@+id/user_account_setting"/>

                <TextView
                    android:id="@+id/mail_change"
                    style="@style/AppSettingSelectableText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_mail_change"
                    app:layout_constraintTop_toBottomOf="@+id/profile_change"/>

                <TextView
                    android:id="@+id/password_change"
                    style="@style/AppSettingSelectableText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_password_change"
                    app:layout_constraintTop_toBottomOf="@+id/mail_change"/>

                <Button
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_l"
                    android:layout_marginEnd="8dp"
                    android:text="@string/logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_change" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
