<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="birth.h3.app.curl_kusegeapp.ui.setting.app.PushViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.app.PushFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_push_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/tv_setting_push"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        tools:ignore="MissingConstraints" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app_push_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_2l"
                android:text="@string/push_lead_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/device_info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_info_btn"
                android:layout_margin="@dimen/margin_2l"
                android:background="@color/colorOrage"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:paddingStart="@dimen/padding_l"
                android:paddingEnd="@dimen/padding_l"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_2l"
                android:text="@string/push_lead_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/device_info_btn" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_2l"
                android:text="@string/push_lead_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            a<ImageView
                android:id="@+id/push_description_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pushDescriptionImage"
                android:layout_marginTop="@dimen/margin_2l"
                android:layout_marginStart="@dimen/margin_2l"
                android:layout_marginEnd="@dimen/margin_2l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:screenShot="@{viewModel.image1}" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_2l"
                android:text="@string/push_lead_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/push_description_1" />

            <ImageView
                android:id="@+id/push_description_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pushDescriptionImage"
                android:layout_margin="@dimen/margin_2l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:screenShot="@{viewModel.image2}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
